feat: rewrite step five

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -48,6 +48,7 @@ body {
   margin-top: 5px;
   display: flex;
   width: 100px;
+  margin-left: 57px;
   justify-content: space-between;
 }
 
@@ -75,4 +76,12 @@ body {
 .region-hover {
   stroke: #000;
   stroke-width: 4px;
+}
+
+//STEP FIVE
+
+.actions {
+  display: flex;
+  width: 732px;
+  justify-content: space-between;
 }
