--- a/src/styles.styl
+++ b/src/styles.styl
@@ -82,7 +82,8 @@ body {
 
 .actions {
   display: flex;
-  width: 732px;
+  width: 681px;
+  padding-left: 49px;
   justify-content: space-between;
 }
 
@@ -90,20 +91,20 @@ body {
 
 .header {
   display: flex;
-  width: 910px;
   padding-bottom: 10px;
   margin-bottom: 10px;
-  border-bottom: 1px rgba(0,0,0,.1) solid;
 }
 
 .title {
   padding-right: 40px;
   margin: 0;
   font-weight: 500;
-  font-size: 18px;
-  line-height: 25px;
-  margin-top: 3px;
-  width: 658px;
+  font-size: 26px;
+  line-height: 27px;
+  margin-top: 21px;
+  padding-left: 48px;
+  width: 718px;
+  box-sizing: border-box;
 }
 
 .preview {
